--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "vue-svg-filler": "^1.0.5"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.15.0",
+    "@nuxtjs/eslint-config": "^12.0.0",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "babel-eslint": "^8.2.6",
+    "eslint": "^7.32.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-vue": "^4.7.1"
   }
 }
